# foundry-copilot-search-validate

./: .env.example  .gitignore  README.md  azure.yaml  fix_script.py  main.py  pyproject.toml  pytest.ini  requirements-agents-af.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml
config/: search_config.json
copilot/: manifest.json  openapi-lookup-v2.json  openapi-v2.json  openapi.yaml  quick_reference_guide.md
docs/: AgentArchitecturePaths.md  AgentFrameworkAgentTesting.md  CopilotStudioAuth.md  CopilotStudioHybridExample.md  CopilotStudioIntegration.md  CopilotStudioLookupRouting.md  CostComparison.md  FoundryAgentArchitecture.md  FoundryAgentTesting.md  IntegratedVectorizationPipeline.md  MergeSkillRecommendations.md  RetrievalPatterns.md  Walkthrough.md
evals/: README.md  dataset.py  metrics.py  run_eval.py
infra/: README.md  main.bicep  main.json  main.parameters.json
infra/bicep/: README.md  abbreviations.json  connect-appinsights.bicep  main.bicep  main.json
infra/bicep/modules/: networking.bicep
infra/terraform/: README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
scripts/: index_knowledge_base.py  regenerate_encrypted_docx.py  upload_to_blob.py
src/: .funcignore  function_app.py  observability.py  requirements.txt
src/agents/: __init__.py  answer_synthesis_agent.py  foundry_client.py  orchestrator_factory.py  orchestrator_pattern_b.py  reference_validator_agent.py  register_agents.py  retrieval_agent.py  sequential_orchestrator_foundry.py  source_validator_agent.py
src/agents_af/: README.md  __init__.py  answer_synthesis_agent.py  reference_validator_agent.py  retrieval_agent.py  sequential_orchestrator.py  source_validator_agent.py
src/api/: function_app.py  models.py  requirements.txt
src/config/: .env.example  search_config.json
src/search/: __init__.py  azure_ai_search_client.py
tests/: conftest.py  e2e_live_agent_framework.py  e2e_live_foundry_service.py  test_agentic_retrieval_extractive.py  test_agents_af.py  test_agents_foundry.py  test_e2e_agent_framework.py  test_e2e_foundry_service.py  test_file_location_retrieval.py  test_full_flow.py  test_function_copilot.py  test_mcp_query_retrieval.py  test_queries.py  test_query_retrieval.py  test_retrieval_patterns_live.py
