[project]
name = "foundry-copilot-search-validate"
version = "0.1.0"
description = "End-to-end agentic retrieval pipeline using Azure AI Foundry Agents, Azure AI Search (MCP), and Copilot Studio — with built-in citation validation and evaluation harness."
readme = "README.md"
requires-python = ">=3.13"
# Default dependencies are GA-only. The default Copilot Studio → Foundry Agent
# (with MCP for agentic retrieval) pattern uses only these GA packages.
# Preview Agent Framework experimentation lives under the optional `agents-af`
# extra and the src/agents_af/ tree — see src/agents_af/README.md.
dependencies = [
    "azure-ai-contentunderstanding>=1.1.0,<1.2",
    "azure-ai-documentintelligence>=1.0.2,<2",
    "azure-ai-projects==2.2.0",
    "azure-functions==2.1.0",
    "azure-identity>=1.25.3",
    "azure-search-documents>=12.0.0,<12.1",
    "azure-storage-blob>=12.29.0",
    "diagrams>=0.25.1",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "nest-asyncio>=1.6.0",
    "openai>=2.41.0",
    "playwright>=1.60.0",
    "plotly>=6.8.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.12.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "ruff>=0.15.15",
    "tenacity>=9.1.4",
]

[project.optional-dependencies]
# Preview / TESTING ONLY — Microsoft Agent Framework path used by
# src/agents_af/. agent-framework 1.7 transitively pins
# azure-search-documents==11.7.0b2 via agent-framework-azure-ai-search, which
# conflicts with the GA azure-search-documents>=12.0.0 in the default deps.
# Therefore install this extra in a SEPARATE virtual environment, e.g.:
#
#   uv venv .venv-agents-af --python 3.13
#   uv pip install -r requirements-agents-af.txt --prerelease=allow
#
# Do NOT use this in production. See src/agents_af/README.md.
agents-af = [
    "agent-framework==1.7.0",
    "agent-framework-azure-ai==1.0.0rc6",
    "agent-framework-foundry==1.7.0",
    "agent-framework-orchestrations==1.0.0rc2",
    "azure-ai-inference==1.0.0b9",
]

[tool.uv]
# GA-only by default. Preview installs (e.g. agents-af) must explicitly opt in
# via `--prerelease=allow` against requirements-agents-af.txt in a separate venv.
prerelease = "disallow"
